# swagger.json
@@ -1,27 +1,13 @@
 {
   "swagger": "2.0",
-  "info": {
-    "version": "1.0.0",
-    "title": "ThumbGen API",
-    "description": "A sample API that generates thumbnails for images using the ThumbGen service",
-    "termsOfService": "https://github.com/uwenayoallain/thumbgen",
-    "contact": {
-      "name": "Uwenayo Allain",
-      "email": "uwenayoallain@gmail.com",
-      "url": "https://github.com/uwenayoallain"
-    },
-    "license": {
-      "name": "MIT",
-      "url": "https://github.com/uwenayoallain/thumbgen"
-    }
-  },
-  "host": "petstore.swagger.io",
-  "basePath": "/api",
+
+  "host": "localhost:3000",
+  "basePath": "/",
   "schemes": ["http"],
   "consumes": ["application/json"],
   "produces": ["application/json"],
   "paths": {
-    "/pets": {
+    "/user/signup": {
       "get": {
         "description": "Returns all pets from the system that the user has access to\nNam sed condimentum est. Maecenas tempor sagittis sapien, nec rhoncus sem sagittis sit amet. Aenean at gravida augue, ac iaculis sem. Curabitur odio lorem, ornare eget elementum nec, cursus id lectus. Duis mi turpis, pulvinar ac eros ac, tincidunt varius justo. In hac habitasse platea dictumst. Integer at adipiscing ante, a sagittis ligula. Aenean pharetra tempor ante molestie imperdiet. Vivamus id aliquam diam. Cras quis velit non tortor eleifend sagittis. Praesent at enim pharetra urna volutpat venenatis eget eget mauris. In eleifend fermentum facilisis. Praesent enim enim, gravida ac sodales sed, placerat id erat. Suspendisse lacus dolor, consectetur non augue vel, vehicula interdum libero. Morbi euismod sagittis libero sed lacinia.\n\nSed tempus felis lobortis leo pulvinar rutrum. Nam mattis velit nisl, eu condimentum ligula luctus nec. Phasellus semper velit eget aliquet faucibus. In a mattis elit. Phasellus vel urna viverra, condimentum lorem id, rhoncus nibh. Ut pellentesque posuere elementum. Sed a varius odio. Morbi rhoncus ligula libero, vel eleifend nunc tristique vitae. Fusce et sem dui. Aenean nec scelerisque tortor. Fusce malesuada accumsan magna vel tempus. Quisque mollis felis eu dolor tristique, sit amet auctor felis gravida. Sed libero lorem, molestie sed nisl in, accumsan tempor nisi. Fusce sollicitudin massa ut lacinia mattis. Sed vel eleifend lorem. Pellentesque vitae felis pretium, pulvinar elit eu, euismod sapien.\n",
         "operationId": "findPets",
@@ -65,80 +51,25 @@
         }
       },
       "post": {
-        "description": "Creates a new pet in the store.  Duplicates are allowed",
-        "operationId": "addPet",
+        "description": "Creates a new user",
+        "operationId": "createUser",
         "parameters": [
           {
-            "name": "pet",
+            "name": "username",
             "in": "body",
-            "description": "Pet to add to the store",
+            "description": "The username of the user",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/NewPet"
+              "$ref": "#/definitions/User"
             }
           }
         ],
         "responses": {
           "200": {
-            "description": "pet response",
+            "description": "user response",
             "schema": {
-              "$ref": "#/definitions/Pet"
+              "$ref": "#/definitions/User"
             }
-          },
-          "default": {
-            "description": "unexpected error",
-            "schema": {
-              "$ref": "#/definitions/Error"
-            }
-          }
-        }
-      }
-    },
-    "/pets/{id}": {
-      "get": {
-        "description": "Returns a user based on a single ID, if the user does not have access to the pet",
-        "operationId": "find pet by id",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "ID of pet to fetch",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "pet response",
-            "schema": {
-              "$ref": "#/definitions/Pet"
-            }
-          },
-          "default": {
-            "description": "unexpected error",
-            "schema": {
-              "$ref": "#/definitions/Error"
-            }
-          }
-        }
-      },
-      "delete": {
-        "description": "deletes a single pet based on the ID supplied",
-        "operationId": "deletePet",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "ID of pet to delete",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "pet deleted"
           },
           "default": {
             "description": "unexpected error",
@@ -151,34 +82,25 @@
     }
   },
   "definitions": {
-    "Pet": {
+    "User": {
       "type": "object",
       "allOf": [
         {
-          "$ref": "#/definitions/NewPet"
-        },
-        {
-          "required": ["id"],
+          "required": ["Email", "Password", "UserName"],
           "properties": {
             "id": {
               "type": "integer",
               "format": "int64"
+            },
+            "Email": {
+              "type": "string"
+            },
+            "Password": {
+              "type": "string"
             }
           }
         }
       ]
-    },
-    "NewPet": {
-      "type": "object",
-      "required": ["name"],
-      "properties": {
-        "name": {
-          "type": "string"
-        },
-        "tag": {
-          "type": "string"
-        }
-      }
     },
     "Error": {
       "type": "object",
